<resources>
    <string name="app_name">NotesViewer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="submit_changes">Submit</string>
    <string name="note_body">note body</string>
    <string name="note_title">note title</string>
    <string name="edit_message">edit message</string>
    <string name="new_message">New message</string>
    <string name="clear_notes">Clear notes</string>
    <string name="delete_message">delete message</string>
    <string name="clear_selection">Clear selection</string>
    <string name="owner">Pavel Hryts</string>
    <string name="owner_email">silendil@yandex.ru</string>
    <string name="show_message">show message</string>
    <string name="empty">EMPTY</string>
    <string name="notes">Notes</string>
    <string name="about">About</string>
    <string name="navigation">Navigation</string>
    <string name="places">Places</string>
    <string name="test_caption">Test android application</string>
    <string name="written_by">Written by Pavel Hryts, 2018</string>
    <string name="google_maps_key">AIzaSyCsq_P1fPEMokRT2NbmazZ6EeKEnJgpLZ0</string>
    <string name="my_position">My position</string>
    <string name="add_new_place">Add new place</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="title">Title:</string>
    <string name="input_title">enter title</string>
    <string name="submit">Submit</string>
    <string name="new_marker">add new marker</string>
    <string name="weather_key">ec193a077d0f4f21e01a2e865af58e77</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback_title">Input your message</string>
    <string name="send">Send message</string>
    <string name="feedback">Feedback</string>
    <string name="location">Location: </string>
    <string name="weather_string">Weather: </string>
    <string name="temp">Temperature: </string>
    <string name="press">Pressure: </string>
    <string name="press_units">hPa</string>
    <string name="weather_not_found">Weather data not found</string>
    <string name="required">Field is required</string>
    <string name="feedback_fragment_title">Feedback</string>
    <string name="create_marker_title">Add new marker?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_notes">Notes</string>
    <string name="src">SRC</string>
</resources>
