<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/add_message"
        android:orderInCategory="1"
        android:icon="@drawable/option_add"
        app:showAsAction="ifRoom"
        android:title="@string/new_message"/>
    <item android:id="@+id/edit_message"
        android:orderInCategory="2"
        android:icon="@drawable/option_edit"
        app:showAsAction="ifRoom"
        android:title="@string/edit_message"/>
    <item android:id="@+id/delete_message"
        android:orderInCategory="3"
        android:icon="@drawable/option_delete"
        app:showAsAction="ifRoom"
        android:title="@string/delete_message"/>
    <item
        android:id="@+id/clear_notes"
        android:orderInCategory="4"
        android:title="@string/clear_notes"
        android:icon="@drawable/option_remove_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_selection"
        android:orderInCategory="5"
        android:title="@string/clear_selection"
        android:icon="@drawable/option_empty_selection"
        app:showAsAction="ifRoom" />
</menu>
