<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/captionMarker"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/marker_latitude"
            style="@style/valueMarker" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/captionMarker"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/marker_longitude"
            style="@style/valueMarker" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/map_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/marker_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/input_title"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
